secondfile/objects/ATTCPQProposal__c.object
<CustomObject>
    <fields>
        <fullName>ATTCPQ_Expected_End_Date__c</fullName>
        <description>Quote End Date</description>
        <label>Expected End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ATTCPQ_Expected_Start_Date__c</fullName>
        <description>Proposal Start Date</description>
        <label>Expected Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ATTCPQ_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ATTCPQ_Proposal_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account association  up to Proposal</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ATTCPQ_Proposal_Approval_Stage__c</fullName>
        <description>Proposal Stage</description>
        <label>Approval Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Pending Deal Reg</fullName>
                </value>
                <value>
                    <fullName>Deal Reg Approved</fullName>
                </value>
                <value>
                    <fullName>Deal Reg Denied</fullName>
                </value>
                <value>
                    <fullName>Special Pricing Requested</fullName>
                </value>
                <value>
                    <fullName>Special Pricing Approved</fullName>
                </value>
                <value>
                    <fullName>Special Pricing Denied</fullName>
                </value>
                <value>
                    <fullName>SP Approval Requested</fullName>
                </value>
                <value>
                    <fullName>SP Approval Request Denied</fullName>
                </value>
                <value>
                    <fullName>Pricing Schedule Requested</fullName>
                </value>
                <value>
                    <fullName>Pricing Schedule Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Additional Site Details</fullName>
                </value>
                <value>
                    <fullName>Order Submitted</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Bulk Service Availability Requested</fullName>
                </value>
                <value>
                    <fullName>Bulk Service Availability Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>TSC Review Requested</fullName>
                </value>
                <value>
                    <fullName>TSC Review Confirmed</fullName>
                </value>
                <value>
                    <fullName>TSC Review Denied</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ATTCPQ_Proposal_Name__c</fullName>
        <label>Proposal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>End Customer tied to the proposal</description>
        <label>End Customer</label>
        <referenceTo>End_Customer__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quote/Proposal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{0000000000}</displayFormat>
        <label>Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>